--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -9,4 +9,8 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-gradle-plugin:3.2.10'
     implementation 'com.diffplug.spotless:spotless-plugin-gradle:6.25.0'
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.5'
+    implementation 'org.springframework.boot:spring-boot-starter-web:3.1.2'
+    compileOnly 'org.projectlombok:lombok:1.18.28'
+    annotationProcessor 'org.projectlombok:lombok:1.18.28'
 }
